# ifj-proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  bugs  makefile  rozdeleni  rozsireni
source/: Makefile  ast.h  codegen.c  codegen.h  err.c  err.h  expression.c  expression.h  main.c  main.h  memwork.c  memwork.h  parser.c  parser.h  scanner.c  scanner.h  str_buff.c  str_buff.h  symtable.c  symtable.h  token_stack.c  token_stack.h
tests/: debug_scanner.c  memwork_test.cpp  scanner_test.cpp  symtable_test.cpp  test.c  test.txt  test_str_buff.cpp
tests/scanner_test_input/: ID_test  basic_in_2  basic_in_comment  numbers_test
